<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6"
    android:gravity="center_horizontal"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/cancel"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="start"
        android:background="@drawable/ic_cancel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="4"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/colorDarkPrimary" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/edittext"
        android:autofillHints=""
        android:hint="@string/username"
        android:textColor="@color/colorNormalPrimary"
        android:textColorHint="@color/colorLightPrimary"
        android:drawableStart="@drawable/ic_username"
        android:drawableLeft="@drawable/ic_username"
        android:textCursorDrawable="@null"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPersonName"
        android:drawablePadding="8dp"
        android:ems="10"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:autofillHints=""
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:textColor="@color/colorNormalPrimary"
        android:textColorHint="@color/colorLightPrimary"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:textCursorDrawable="@null"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:ems="10"/>

    <EditText
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:autofillHints=""
        android:background="@drawable/edittext"
        android:hint="@string/confirm_password"
        android:textColor="@color/colorNormalPrimary"
        android:textColorHint="@color/colorLightPrimary"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:textCursorDrawable="@null"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:ems="10"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:autofillHints=""
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:textColor="@color/colorNormalPrimary"
        android:textColorHint="@color/colorLightPrimary"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:textCursorDrawable="@null"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textEmailAddress"
        android:drawablePadding="8dp"
        android:ems="10"/>

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorBackground"
        android:background="@drawable/ripple"/>

</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Account_page">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Create Account"
            app:titleMarginStart="130dp" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_create__account_page" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_help" />

</android.support.design.widget.CoordinatorLayout>-->