<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Edit_Device_Page"
    tools:showIn="@layout/activity_edit__device__page">

    <EditText
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edittext"
        android:autofillHints=""
        android:hint="@string/device_name"
        android:textColor="@color/colorNormalPrimary"
        android:textColorHint="@color/colorLightPrimary"
        android:drawableStart="@drawable/ic_device"
        android:drawableLeft="@drawable/ic_device"
        android:textCursorDrawable="@null"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textUri|textPersonName"
        android:drawablePadding="8dp"
        android:ems="10"/>

    <EditText
        android:id="@+id/device_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edittext"
        android:autofillHints=""
        android:hint="@string/location"
        android:textColor="@color/colorNormalPrimary"
        android:textColorHint="@color/colorLightPrimary"
        android:drawableStart="@drawable/ic_location"
        android:drawableLeft="@drawable/ic_location"
        android:textCursorDrawable="@null"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPersonName"
        android:drawablePadding="8dp"
        android:ems="10"/>

    <!--    <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="29dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/manage_users" />-->

    <!--    <TextView
            android:id="@+id/textView2"
            android:layout_width="94dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/device_status" />-->

    <!--    <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/history" />-->

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorBackground"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/manage_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:text="@string/manage"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorBackground"
        android:background="@drawable/button"/>

    <!--    <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete_device" />-->

    <!--    <TextView
            android:id="@+id/textView3"
            android:layout_width="74dp"
            android:layout_height="39dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="99dp"
            android:text="@string/stars" />-->
</LinearLayout>